deployment/es/elastic.yaml
---
  apiVersion: v1
  kind: Namespace
  metadata:
    name: elastic
