deployment/es/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: elastic
 namespace: elastic
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
   nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
 tls:
   - hosts:
     - elastic.BASE_DN
     secretName: tls
 rules:
   - host: elastic.BASE_DN
     http:
       paths:
       - backend:
           serviceName: elastic-cluster-es-http
           servicePort: 9200
